Fri Oct  8 00:24:54 2010  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/csv.rb: Fixing documentation typos.  [ruby-core:32712]

Thu Oct  7 18:10:35 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cygwin/GNUmakefile.in, win32/Makefile.sub (RCFILES): depend on
	  real config.rb file.  [ruby-core:32709]

Wed Oct  6 11:52:12 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (fptr_finalize): write_mutex might have been destroyed
	  already in finalization phase, as the order of finalizers is not
	  guaranteed.  rb_mutex_t should be used in place of Mutex object
	  in the future.

Mon Oct  4 12:43:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (regexp): dregexp has literal string only at the head
	  and successors are array.  [ruby-core:32682]

Mon Oct  4 09:30:42 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/lib/openssl/bn.rb (Integer#to_bn): OpenSSL::BN.new
	  accepts only Strings, so call Integer#to_s(16).
	  16 is for an optimization. [ruby-dev:42336]

Mon Oct  4 07:57:51 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* cont.c (fiber_memsize): Return size.
	  Before this change, fiber_memsize always returns 0.

Sat Oct  2 22:59:32 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_thread.rb: add for win32ole with Thread.

Thu Sep 30 16:11:08 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_getenv): should return NULL if specified name
	  is empty. a patch from Heesob Park at [ruby-core:32650]

Sun Aug 29 13:22:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_thread_method_id_and_class): curried proc has no
	  method.  [ruby-core:31871]

Fri Sep 24 23:44:59 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (sym_call), vm.c (invoke_block_from_c),
	  vm_insnhelper.c (vm_yield_with_cfunc): pass given block.
	  [ruby-core:32075]

	* vm_eval.c (rb_funcall_passing_block): new function to call
	  method with passing given block.
